Fix for OpenJDK 16